kubernetes/pr-template/11-grafana-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: $PR_NAMESPACE
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  minReadySeconds: 5
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:latest
          ports:
            - containerPort: 3000
          startupProbe:
            httpGet:
              path: /api/health
              port: 3000
            periodSeconds: 5
            failureThreshold: 12
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            periodSeconds: 5
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            periodSeconds: 10
            initialDelaySeconds: 15
          volumeMounts:
            - name: grafana-config
              mountPath: /etc/grafana/provisioning/datasources/datasource.yaml
              subPath: datasource.yaml
            - name: grafana-config
              mountPath: /etc/grafana/provisioning/dashboards/provider.yaml
              subPath: provider.yaml
            - name: grafana-dashboards
              mountPath: /var/lib/grafana/dashboards/resumeapp-dashboard.json
              subPath: grafana-dashboard.json
      volumes:
        - name: grafana-config
          configMap:
            name: grafana-config
        - name: grafana-dashboards
          configMap:
            name: grafana-dashboard-config-configmap
