kubernetes/pr-template/21-web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resumeapp-web
  namespace: $PR_NAMESPACE
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  minReadySeconds: 5
  selector:
    matchLabels:
      app: resumeapp-web
  template:
    metadata:
      labels:
        app: resumeapp-web
    spec:
      containers:
        - name: resumeapp-web
          image: paulawenighofer/resumeapp-web:$IMAGE_TAG
          imagePullPolicy: Always
          ports:
            - containerPort: 5100
