kubernetes/pr-template/3b-azurite-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azurite
  namespace: $PR_NAMESPACE
spec:
  replicas: 1
  selector:
    matchLabels:
      app: azurite
  template:
    metadata:
      labels:
        app: azurite
    spec:
      containers:
        - name: azurite
          image: mcr.microsoft.com/azure-storage/azurite:3.35.0
          imagePullPolicy: IfNotPresent
          args:
            - azurite
            - --blobHost
            - 0.0.0.0
            - --blobPort
            - "10000"
            - --location
            - /data
            - --debug
            - /data/debug.log
          ports:
            - containerPort: 10000
          startupProbe:
            tcpSocket:
              port: 10000
            periodSeconds: 5
            failureThreshold: 12
          readinessProbe:
            tcpSocket:
              port: 10000
            periodSeconds: 5
            initialDelaySeconds: 5
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: 10000
            periodSeconds: 10
            initialDelaySeconds: 20
            failureThreshold: 3
          volumeMounts:
            - name: azurite-data
              mountPath: /data
      volumes:
        - name: azurite-data
          persistentVolumeClaim:
            claimName: resumeapp-pvc-azurite
