kubernetes/pr-template/4-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resumeapp-api
  namespace: $PR_NAMESPACE
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  minReadySeconds: 5
  selector:
    matchLabels:
      app: resumeapp-api
  template:
    metadata:
      labels:
        app: resumeapp-api
    spec:
      containers:
        - name: resumeapp-api
          image: paulawenighofer/resumeapp:$IMAGE_TAG
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /health/startup
              port: 8080
            periodSeconds: 5
            failureThreshold: 12
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            periodSeconds: 5
            initialDelaySeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
            periodSeconds: 10
            initialDelaySeconds: 15
            failureThreshold: 3
