kubernetes/pr-template/12-grafana-service.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: $PR_NAMESPACE
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: 3000
