kubernetes/pr-template/15-loki-service.yml
apiVersion: v1
kind: Service
metadata:
  name: loki-service
  namespace: $PR_NAMESPACE
spec:
  type: ClusterIP
  selector:
    app: loki
  ports:
    - name: http
      port: 3100
      targetPort: 3100
