kubernetes/pr-template/18-otel-collector-service.yml
apiVersion: v1
kind: Service
metadata:
  name: otel-collector-service
  namespace: $PR_NAMESPACE
spec:
  type: ClusterIP
  selector:
    app: otel-collector
  ports:
    - name: grpc
      port: 4317
      targetPort: 4317
    - name: http
      port: 4318
      targetPort: 4318
    - name: prometheus
      port: 8889
      targetPort: 8889
