kubernetes/pr-template/3-postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: resumeapp-postgres-service
  namespace: $PR_NAMESPACE
spec:
  type: ClusterIP
  selector:
    app: resumeapp-postgres
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
