kubernetes/pr-template/3c-azurite-service.yml
apiVersion: v1
kind: Service
metadata:
  name: azurite-service
  namespace: $PR_NAMESPACE
spec:
  selector:
    app: azurite
  ports:
    - name: blob
      protocol: TCP
      port: 10000
      targetPort: 10000
