kubernetes/pr-template/19-prometheus-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: $PR_NAMESPACE
spec:
  rules:
    - host: $PR_PROMETHEUS_HOST
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-service
                port:
                  number: 9090
