kubernetes/pr-template/6-api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resumeapp-web-ingress
  namespace: $PR_NAMESPACE
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - $PR_HOSTNAME
      secretName: resumeapp-web-tls
  rules:
    - host: $PR_HOSTNAME
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resumeapp-api-service
                port:
                  number: 80
